--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,5 +3,5 @@
         <app-hero-home></app-hero-home>
         <app-navbar-home></app-navbar-home>
     </div>
-    <app-list-productos></app-list-productos>
+    <app-list-productos [isHome]="true"></app-list-productos>
 </div>
