--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
-.container{
-    height: 100vh;
-    width: 100vw;
+
+
+.page-container {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+}
+
+.content-wrap {
+    flex: 1;
 }
