--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
 @if(router.url!="/" && router.url!="/login" && router.url!="/register"){
-<div class="container">
-    <app-header></app-header>
-    <app-menu-perfil></app-menu-perfil>
-    <app-pop-up-add></app-pop-up-add>
-    <router-outlet></router-outlet>
-    <app-footer></app-footer>
-</div>
+    <div class="page-container">
+        <div class="content-wrap">
+            <app-header></app-header>
+            <app-menu-perfil></app-menu-perfil>
+            <app-pop-up-add></app-pop-up-add>
+            <router-outlet></router-outlet>
+        </div>
+        <div>
+            <app-footer></app-footer>
+        </div>
+    </div>
 }
 @else{
     <router-outlet></router-outlet>
 }
+
