--- a/src/app/components/productos-details/productos-details.component.css
+++ b/src/app/components/productos-details/productos-details.component.css
@@ -6,11 +6,10 @@
   width: 100vw;
   min-height: 90vh;
   margin-top: 30px;
+  position: relative;
 }
 
 .product-container {
-  max-width: 800px;
-  margin: 80px auto;
   padding: 2rem;
   background: #ffffff;
   border-radius: 15px;
@@ -74,6 +73,9 @@
   border-radius: 50px;
   font-size: 1.1rem;
   margin-left: 20px;
+  position: absolute;
+  top: 0;
+  left: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
@@ -144,4 +146,12 @@
 .comment-body {
   color: #444;
   line-height: 1.5;
+}
+.product-comments-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: start;
+  width: 60%;
+  gap: 120px;
 }
