--- a/src/app/components/rutinas-details/rutinas-details.component.css
+++ b/src/app/components/rutinas-details/rutinas-details.component.css
@@ -5,12 +5,12 @@
   justify-content: center;
   min-height: 90vh;
   margin-top: 30px;
+  position: relative;
 }
 
 .product-container {
   width: 800px;
   height: 70%;
-  margin: 40px auto;
   padding: 30px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 20px;
@@ -78,6 +78,9 @@
   border-radius: 50px;
   font-size: 1.1rem;
   margin-left: 20px;
+  position: absolute;
+  top: 0;
+  left: 10px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
@@ -153,5 +156,14 @@
 .comment-body {
   color: #444;
   line-height: 1.5;
+}
+
+.product-comments-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: start;
+  width: 60%;
+  gap: 120px;
 }
 
