--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,8 +1,8 @@
 .home{
-    width: 100vw;
-    min-height: 90vh;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    min-height: 80vh;
+    gap: 25px;
+    align-items: center;
+    width: 100%;
 }
