--- a/src/app/components/edit-rutina/edit-rutina.component.css
+++ b/src/app/components/edit-rutina/edit-rutina.component.css
@@ -3,6 +3,7 @@ form {
     flex-direction: column;
     align-items: center;
     max-width: 800px;
+    min-height: 600px;
     margin: 80px auto;
     padding: 2rem;
     background: #ffffff;
@@ -75,4 +76,12 @@ button:hover {
 
 .error-message {
     color: red;
+}
+.preview-container{
+    width: 100%;
+    height: 100%;
+}
+.preview-image{
+    width: 100%;
+    height: 100%;
 }
