--- a/src/app/components/productos-details/productos-details.component.html
+++ b/src/app/components/productos-details/productos-details.component.html
@@ -5,8 +5,8 @@
   <div class="product-comments-container">
     <div>
       <div class="product-container">
-        <h1>{{producto.nombre}}</h1>
-          <img [src]="producto.imagen" alt="imagen">
+        <h1>{{producto?.nombre}}</h1>
+          <img [src]="producto?.imagen" alt="imagen">
           <p>{{producto.descripcion}}</p>
           <p>{{producto.precio}} USD</p>
           @if(!comprado)
