fix: history error

--- a/src/app/components/productos-details/productos-details.component.html
+++ b/src/app/components/productos-details/productos-details.component.html
@@ -7,8 +7,8 @@
       <div class="product-container">
         <h1>{{producto?.nombre}}</h1>
           <img [src]="producto?.imagen" alt="imagen">
-          <p>{{producto.descripcion}}</p>
-          <p>{{producto.precio}} USD</p>
+          <p>{{producto?.descripcion}}</p>
+          <p>{{producto?.precio}} USD</p>
           @if(!comprado)
           {
             <button (click)="createPaymentPreference()">Comprar</button>
